--- a/Pierre.Solution/Pierre/Views/Order/Show.cshtml
+++ b/Pierre.Solution/Pierre/Views/Order/Show.cshtml
@@ -1,14 +1,7 @@
-@using Pierre.Models;
+<h1>To Do List Item Details: </h1>
 
-<h3>Here are all the orders at this Vendor:</h3>
+<h2>@Model["item"].Description</h2>
+<h3>Category: @Model["category"].Name</h3>
 
-<ol>
-@foreach (Vendor vendor in @Model["orders"])
-{
-  <li><a href='/vendors/@Model["vendor"].Id/orders/@order.Id'>@item.Description</a></li>
-}
-</ol>
-
-<p><a href='/vendors/@Model["vendor"].Id/order/new'>Add a new item</a></p>
-<p><a href='/vendors'>Return to category list</a></p>
-<p><a href='/'>Return to Main Page</a></p>
+<a href='/categories/@Model["category"].Id/items/new'>Add another item</a>
+<a href='/categories'>View all categories</a>
