--- a/Pierre.Solution/Pierre/Views/Order/Show.cshtml
+++ b/Pierre.Solution/Pierre/Views/Order/Show.cshtml
@@ -3,5 +3,5 @@
 <h2>@Model["item"].Description</h2>
 <h3>Category: @Model["category"].Name</h3>
 
-<a href='/categories/@Model["category"].Id/items/new'>Add another item</a>
-<a href='/categories'>View all categories</a>
+<a href='/vendors/@Model["vendor"].Id/order/new'>Add another order</a>
+<a href='/vendors'>View all categories</a>
