--- a/Pierre.Solution/Pierre/Views/Order/New.cshtml
+++ b/Pierre.Solution/Pierre/Views/Order/New.cshtml
@@ -1,7 +1,7 @@
 <h1>Add a new order to @Model.Name</h1>
 
-<form action="/categories/@Model.Id/orders" method="post">
-  <input id="categoryId" name="categoryId" type="hidden" value="@Model.Id">
+<form action="/vendors/@Model.Id/orders" method="post">
+  <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
   <label for="orderDescription">Order Description</label>
   <input id="orderDescription" name="orderDescription" type="text">
   <button type='submit'>Add order</button>
