--- a/Pierre.Solution/Pierre/Views/Order/Show.cshtml
+++ b/Pierre.Solution/Pierre/Views/Order/Show.cshtml
@@ -1,7 +1,7 @@
 <h1>To Do List Item Details: </h1>
 
-<h2>@Model["item"].Description</h2>
-<h3>Category: @Model["category"].Name</h3>
+<h2>@Model["order"].Description</h2>
+<h3>Category: @Model["vendor"].Name</h3>
 
 <a href='/vendors/@Model["vendor"].Id/order/new'>Add another order</a>
 <a href='/vendors'>View all categories</a>
