--- a/Pierre.Solution/Pierre/Views/Home/Index.cshtml
+++ b/Pierre.Solution/Pierre/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
 <h1>Vendor and Order Tracker</h1>
+<li><img src='~/img/logo.jpg'/></li>
 <a href='/vendors/new'>Add a new Vendor</a><br><br>
 <a href='/vendors'>View all Vendors</a>
